--- a/index.html
+++ b/index.html
@@ -173,49 +173,63 @@
         <li>
           <a href="#">
             <img src="images/community1.png" alt="우붓">
-            <p class="c_tit">예술과 사람의 마을, 우붓</p>
-            <span></span>
-            <p>넓게 펼쳐진 초록빛의 계단식 논.<br>
+            <div class="caption">
+            <p class="c_tit1">예술과 사람의 마을, 우붓</p>
+            <span class="bar1"></span>
+            <p class="c_txt1">넓게 펼쳐진 초록빛의 계단식 논.<br>
               뜨갈랄랑길을 실제로 보니 상상했던것보다<br>
               더 큰 스케일에 압도당했다.</p>
+              <p class="c_insta"><img src="images/instagram.png" alt="인스타그램"></p>
+            </div>
           </a>
         </li>
         <li>
           <a href="#">
             <img src="images/community2.jpg" alt="도쿄">
-            <p class="c_tit">버킷리스트, 도쿄</p>
-            <span></span>
-            <p class="c_txt">여전히 생생한 장면 하나.<br>
+            <div class="caption">
+            <p class="c_tit2">버킷리스트, 도쿄</p>
+            <span class="bar2"></span>
+            <p class="c_txt2">여전히 생생한 장면 하나.<br>
               일본어로 쓰인 간판과 표지판,<br>
               그리고 쾌적한 도로-그순간, 우리는<br>
               도쿄에 와 있다는 사실을 깨달았다.</p>
+              <p class="c_insta"><img src="images/instagram.png" alt="인스타그램"></p>
+            </div>
           </a>
         </li>
         <li>
           <a href="#">
             <img src="images/community3.png" alt="호카곶">
-            <p class="c_tit">세상의 끝, 호카곶</p>
-            <span></span>
-            <p class="c_txt">깊이를 가늠할 수 없을 만큼<br>
+            <div class="caption">
+            <p class="c_tit3">세상의 끝, 호카곶</p>
+            <span class="bar3"></span>
+            <p class="c_txt3">깊이를 가늠할 수 없을 만큼<br>
               짙푸른 바다가 수평선까지 이어졌다.<br>
               깎아지른 듯한 화강암 절벽 아래에선 파도가<br>
               쉴 새 없이 들이치며 하얗게 부서지고 있었다.</p>
+              <p class="c_insta"><img src="images/instagram.png" alt="인스타그램"></p>
+            </div>
           </a>
         </li>
         <li>
           <a href="#">
             <img src="images/community4.jpg" alt="누사페니다">
-            <p class="c_tit">신의 선물, 누사페니다</p>
-            <span></span>
-            <p class="c_txt">발리가 신들의 섬이라면,<br>
+            <div class="caption">
+            <p class="c_tit4">신의 선물, 누사페니다</p>
+            <span class="bar4"></span>
+            <p class="c_txt4">발리가 신들의 섬이라면,<br>
               누사페니다는 신이 인간을 어여삐 여겨<br>
               내려준 선물이 아닐까.</p>
+              <p class="c_insta"><img src="images/instagram.png" alt="인스타그램"></p>
+            </div>
           </a>
         </li>
         <li class="youtube">
           <a href="#">
             <img src="images/community5.jpg" alt="유투브">
-            <p><img src="images/play_button1.png" alt="재생버튼"></p>
+            <div class="caption">
+            <p class="ytb_btn"><img src="images/play_button1.png" alt="재생버튼"></p>
+          </div>
           </a>
         </li>
       </ul>
