--- a/index.html
+++ b/index.html
@@ -23,6 +23,21 @@
 
 <body >
 <div id="wrap">
+  <!---->
+  <div id="key_popup">
+    <div>
+    <button class="close"></button>
+    <p>
+      본 사이트는 2021년 프론트엔드디자인 교육과정을 이수한 <br>
+      포트폴리오 저작물이므로 불법 복제는 불가하며<br>
+      사용된 이미지는 무료 이미지 및 디스커버리 업체의 이미지를 편집하여 사용하였으므로 <br>
+      저작권은 해당 기업 및 이미지 저작자에게 있음을 알려드립니다.<br>
+      문제의 소지가 있으면 lsabella@nate.com(이메일 주소)로<br>
+      연락 주시기 바랍니다.
+    </p>
+  </div>
+  </div>
+  <!---->
   <div id="top_popup">
     <a href="#"><img src="images/banner.jpg" alt="여름신상보러가기"></a>
     <button class="close sound_only">닫기</button>
@@ -144,7 +159,7 @@
     </div>
     </nav>
   </header>
-  <section id="slide">
+  <section id="slide" class="paral">
     <div class="main">
       <div class="main2"><img src="images/main2.jpg" alt="메인화면 이미지"></div>
       <div class="main1"><img src="images/main1.jpg" alt="메인화면 이미지"></div>
@@ -457,13 +472,13 @@
         <li><a href="#">SNS 저작물 이용동의서</a></li>
       </ul>
       <p class="adress">서울특별시 강남구 언주로 541 에프엔에프빌딩 호 (주) 에프엔에프<br>
-        대표 : 김창수 사업자등록번호 : 214-86-09977 통신판매업신고 : 제 2011-서울강남-00086<br>
+        대표 : 김창수 사업자등록번호 : 214-86-09977&nbsp;&nbsp;&nbsp;&nbsp;통신판매업신고 : 제 2011-서울강남-00086<br>
         교환·반품 반송처 : (17384) 경기도 이천시 마장면 프리미엄아울렛로 1113-37-F&F 물류센터 디스커버리 물류부</p>
         <ul class="call">
-          <li>CS CENTER 080-820-8802</li>
-          <li>A/S 02-3474-8914</li>
-          <li>FAX 02-520-0991</li>
-          <li>E-MAIL discovery@fnf.co.kr</li>
+          <li><span>CS CENTER</span> 080-820-8802</li>
+          <li><span>A/S</span> 02-3474-8914</li>
+          <li><span>FAX</span> 02-520-0991</li>
+          <li><span>E-MAIL</span> discovery@fnf.co.kr</li>
         </ul>
         <div class="f_right">
         <p class="english">ENGLISH SITE</p>
@@ -493,6 +508,7 @@
       </div>
     </div>
   </footer>
+  <button class="footer_ui_btn">맨위로가기</button>
 </div>
 </body>
 
