--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <link rel="stylesheet" type="text/css" href="css/slick.css">
 <link href="css/common.css" rel="stylesheet" type="text/css">
 <link href="css/style.css" rel="stylesheet" type="text/css">
+<link href="sub1.html">
 
 <script src="./js/jquery-3.1.1.min.js" type="text/javascript"></script>
 <script src="http://code.jquery.com/jquery-migrate-3.0.0.js"></script>  
@@ -27,13 +28,18 @@
   <div id="key_popup">
     <div>
     <button class="close"></button>
+    <img src="images/bule_banner.png" alt="#">
     <p>
-      본 사이트는 2021년 프론트엔드디자인 교육과정을 이수한 <br>
-      포트폴리오 저작물이므로 불법 복제는 불가하며<br>
-      사용된 이미지는 무료 이미지 및 디스커버리 업체의 이미지를 편집하여 사용하였으므로 <br>
-      저작권은 해당 기업 및 이미지 저작자에게 있음을 알려드립니다.<br>
-      문제의 소지가 있으면 lsabella@nate.com(이메일 주소)로<br>
-      연락 주시기 바랍니다.
+      본 사이트는<br>
+      2021년 프론트엔드디자인 교육과정을<br>
+      이수한 <span>포트폴리오 저작물</span>이므로<br>
+      불법 복제는 불가하며 사용된 이미지는<br>
+      무료 이미지 및 디스커버리 업체의 이미지를 <br>
+      편집하여 사용하였으므로 저작권은 해당 기업<br>
+      및 이미지 저작자에게 있음을 알려드립니다.<br>
+      <span>문제의 소지가 있으면 연락 주시기 바랍니다.</span><br>
+      <br>
+      <span class="big">lsabella@nate.com</span>      
     </p>
   </div>
   </div>
@@ -78,9 +84,9 @@
       <div class="nav_line"></div>
       <div class="inner">
       <ul class="depth1">
-        <li><a href="#">DISCOVERY</a>
+        <li><a href="sub1.html">DISCOVERY</a>
             <ul class="nav_margin1">
-              <li><a href="#">Brand Story</a></li>
+              <li><a href="sub1.html">Brand Story</a></li>
             </ul>
         </li>
         <li>
@@ -124,7 +130,7 @@
             <li><a href="#">KIDS</a></li>
           </ul>
         </li>
-        <li class="logo"><a href="#"><img src="images/logo.png" alt="로고"></a></li>
+        <li class="logo"><a href="index.html"><img src="images/logo.png" alt="로고"></a></li>
         <li>
           <a href="#">SUMMER</a>
           <ul class="nav_margin6">
