--- a/sub1_1.html
+++ b/sub1_1.html
@@ -10,36 +10,10 @@
         <link href="css/sub_common.css" rel="stylesheet" type="text/css">
         <link rel="stylesheet" type="text/css" href="css/sub_style.css">
         <link href="index.html">
-        <link href="sub1_1.html">
+        <link href="sub1.html">
 
         <script src="./js/jquery-3.1.1.min.js" type="text/javascript"></script>
         <script src="js/main.js" type="text/javascript"></script>
-
-
-        <script>
-          $(function(){
-            $('.yellow_box1').hover(function(){
-              $('.txt1').stop().animate({right:'705px'})
-            },function(){
-              $('.txt1').stop().animate({right:'250px'})
-            })//box1
-
-            $('.yellow_box2').hover(function(){
-              $('.txt2').stop().animate({left:'670px'})
-            },function(){
-              $('.txt2').stop().animate({left:'250px'})
-            })//box2
-
-            $('.yellow_box3').hover(function(){
-              $('.txt3').stop().animate({right:'785px'})
-            },function(){
-              $('.txt3').stop().animate({right:'350px'})
-            })//box3
-
-          })//jp end
-        </script>
-
-
     </head>
     <body>
         <div id="wrap">
@@ -158,31 +132,63 @@
                   </div>
                   </nav>
             </header>
-            <div id="sub_1" class="bsa_content">
-              <section id="sec1">
-                <img src="sub_images/submainbanner_1.jpg" alt="디스커버리소개">
-                <p>전 세계 180여 개 국가, 42개 언어, 15억명이 시청하는 글로벌 <br>
-                  NO.1 다큐멘터리 전문 채널 디스커버리. 1985년부터 20여 년<br>
-                  동안 지구 곳곳을 탐험하며 쌓은 노하우로 놀라운 아웃도어<br>
-                  에디션을 선보입니다.혁신적인 아웃도어를 통해 당신의 삶을<br>
-                  흥미진진한 탐험과 발견의 즐거움 속으로 안내해드립니다.</p>
-              </section>
-              <section id="sec2">
-                <div class="sub_inner">                
-                  <div class="yellow_box1">
-                    <a href="sub1_1.html" class="txt1">DISCOVERY EXPEDITION</a>
-                  </div>
-                  <hr>
-                  <div class="yellow_box2">
-                    <a href="#" class="txt2">DISCOVERY TECHNOLOGY</a>
-                  </div>
-                  <hr>
-                  <div class="yellow_box3">
-                    <a href="#" class="txt3">SMART FIT GUIDE</p>
-                  </div>
-                  <hr>
+            <div id="sub1_1" class="bsa_content">
+                <div class="breadcrumb-wrap">
+                    <ol class="breadcrumb">
+                        <li><a href="">HOME</a></li>
+                        <li><a href=""></a></li>
+                        <li><a href=""></a></li>
+                        <li></li>
+                    </ol>
                 </div>
-              </section>
+                <section id="sec1">
+                    <div class="sub_inner">
+                        <article class="animation">
+                            <p class="border1"></p>
+                            <div class="tit_img">
+                            <img src="images/trip1.jpg" alt="디스커버리 소개">
+                        </div>
+                            <div class="tit_box">
+                            <p class="tit">The world is filled<br>with joy</p>
+                            <p class="txt">
+                                THE WORLD IS FILLED WITH JOY.<br>
+                                Discovery, the NO1 global documentary channel that 1.5<br>
+                                billion people watch in 42 languages and 180 countries all<br>
+                                over the world, presents an outstanding outdoor edition with<br>
+                                knowhow accumulated while exploring all around the Earth<br>
+                                for 20 years since 1985.<br>
+                                It will guide your life to exciting exploration and joyful<br>
+                                discoveries through the innovative Outdoor edition.
+                            </p>
+                            </div>
+                        </article>
+                    </div>
+                </section>
+                <section id="sec2">
+                    <div class="sub_inner">
+                        <article class="animation">
+                            <div class="tit_img2">
+                            <img src="images/trip1.jpg" alt="디스커버리 소개">
+                        </div>
+                            <div class="tit_box">
+                            <p class="tit">Discovery Channel</p>
+                            <p class="txt">
+                                1985년부터 디스커버리 채널은 세계적인 다큐멘터리 전문 채널로<br>
+                                전 세계 180여개 국가에서 42개 언어로 15억명이 시청하고 있는<br>
+                                Global#1 Non-fiction channel입니다.<br>
+                                <br><br>
+                                탐험과 발견, 모험과 도전, 지적 호기심과 탐구 등을 주제로<br>
+                                지구 곳곳의 경이로운 자연과 역사, 과학 등 다양한 분야의 다큐멘터리와<br>
+                                논픽션 컨텐츠를 통해 우리의 삶에 큰 영감을 주고 있습니다.<br>
+                                Discovery Channel Korea는 한국 내 1,100만 가구에 Original Program을<br>
+                                방영하고 있으며, 수준 높은 다큐멘터리 및 자연, 과학에 대한<br>
+                                탐구에 관한 Contents를 주로 다룸으로써 전문적이고<br>
+                                도전적이며 흥미로운 글로벌 이슈를 공유하고 있습니다.<br>
+                            </p>
+                        </div>
+                        </article>
+                    </div>
+                </section>
             </div>
             <footer id="footer">
               <div class="inner">
