--- a/sub1.html
+++ b/sub1.html
@@ -158,6 +158,26 @@
                   </div>
                   </nav>
             </header>
+            <div id="sub1" class="bsa_content">
+              <div class="breadcrumb_wrap">
+                <div class="inner">
+                  <ol class="breadcrumb">
+                      <li><a href="index.html">HOME</a></li>
+                      <li>
+                        <div class="button_box">
+                          <button class="ui_btn"><span></span></button>
+                        </div>
+                      </li>
+                      <li><a href="sub1.html">DISCOVERY</a></li>
+                      <li>
+                        <div class="button_box">
+                          <button class="ui_btn"><span></span></button>
+                        </div>
+                      </li>
+                      <li>Brand Story</li>
+                  </ol>
+                </div>
+              </div>
             <div id="sub_1" class="bsa_content">
               <section id="sec1">
                 <img src="sub_images/submainbanner_1.jpg" alt="디스커버리소개">
