--- a/sub1_1.html
+++ b/sub1_1.html
@@ -133,13 +133,30 @@
                   </nav>
             </header>
             <div id="sub1_1" class="bsa_content">
-                <div class="breadcrumb-wrap">
+                <div class="breadcrumb_wrap">
+                  <div class="inner">
                     <ol class="breadcrumb">
-                        <li><a href="">HOME</a></li>
-                        <li><a href="">DISCOVERY</a></li>
-                        <li><a href="">Brand Story</a></li>
+                        <li><a href="index.html">HOME</a></li>
+                        <li>
+                          <div class="button_box">
+                            <button class="ui_btn"><span></span></button>
+                          </div>
+                        </li>
+                        <li><a href="sub1.html">DISCOVERY</a></li>
+                        <li>
+                          <div class="button_box">
+                            <button class="ui_btn"><span></span></button>
+                          </div>
+                        </li>
+                        <li><a href="sub1.html">Brand Story</a></li>
+                        <li>
+                          <div class="button_box">
+                            <button class="ui_btn"><span></span></button>
+                          </div>
+                        </li>
                         <li>DISCOVERY EXPEDITION</li>
                     </ol>
+                  </div>
                 </div>
                 <section id="sec1">
                     <div class="sub_inner">
