--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
       <div class="nav_line"></div>
       <div class="inner">
       <ul class="depth1">
-        <li><a href="sub1.html">DISCOVERY</a>
+        <li><a href="sub1.html" class="emphasis">DISCOVERY</a>
             <ul class="nav_margin1">
-              <li><a href="sub1.html">Brand Story</a></li>
+              <li><a href="sub1.html" class="emphasis">Brand Story</a></li>
             </ul>
         </li>
         <li>
