--- a/sub1.html
+++ b/sub1.html
@@ -190,7 +190,7 @@
               <section id="sec2">
                 <div class="sub_inner">                
                   <div class="yellow_box1">
-                    <a href="sub1_1.html" class="txt1">DISCOVERY EXPEDITION</a>
+                    <a href="sub1_1.html" class="txt1 blink">DISCOVERY EXPEDITION</a>
                   </div>
                   <hr>
                   <div class="yellow_box2">
