--- a/sub1_1.html
+++ b/sub1_1.html
@@ -186,7 +186,7 @@
                         <article class="animation">
                           <p class="border2"></p>
                             <div class="tit_img2">
-                            <img src="images/trip1.jpg" alt="디스커버리 소개">
+                            <img src="sub_images/intro.jpg" alt="디스커버리 소개">
                         </div>
                             <div class="tit_box">
                             <p class="tit">Discovery Channel</p>
