--- a/index.html
+++ b/index.html
@@ -166,11 +166,11 @@
     </div>
     </nav>
   </header>
-  <section id="slide" class="paral">
+  <section id="slide">
     <div class="main">
-      <div class="main2"><img src="images/main2.jpg" alt="메인화면 이미지"></div>
-      <div class="main1"><img src="images/main1.jpg" alt="메인화면 이미지"></div>
-      <div class="main3"><img src="images/main3.jpg" alt="메인화면 이미지"></div>
+      <div class="main2"><img src="images/main2.jpg" alt="메인화면 이미지" class="ani ani1"></div>
+      <div class="main1"><img src="images/main1.jpg" alt="메인화면 이미지" class="ani ani2"></div>
+      <div class="main3"><img src="images/main3.jpg" alt="메인화면 이미지" class="ani ani3"></div>
       <p class="main_txt">Discovery's  Summer  Story</p>
       <p class="main_tit">SS21</p>
       <div class="main_btn_box">
